<resources>
    <string name="app_name">ToDoList</string>
    <string name="List">List</string>
    <string name="Categories">Categories</string>
    <string name="Settings">Settings</string>
    <string name="Title">Title</string>
    <string name="Description">Description</string>
    <string name="Date">Date</string>
    <string name="Status">Status</string>
    <string name="Notification">Notification</string>
    <string name="Category">Category</string>
    <string name="Attachments">Attachments</string>
    <string name="Add">Add</string>
    <string name="Cancel">Cancel</string>
    <string name="Save">Save</string>
    <string name="Delete">Delete</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>